# ChangeLog for media-gfx/gtksee
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/gtksee/ChangeLog,v 1.14 2004/08/19 11:09:20 mr_bones_ Exp $

  19 Aug 2004; Michael Sterrett <mr_bones_@gentoo.org> -gtksee-0.5.5.1.ebuild:
  clean older version

  14 Aug 2004; Travis Tilley <lv@gentoo.org> gtksee-0.5.6.ebuild:
  stable on amd64

*gtksee-0.5.6 (19 Jul 2004)

  19 Jul 2004; Michael Sterrett <mr_bones_@gentoo.org> +gtksee-0.5.6.ebuild:
  version bump (bug #57526)

  26 May 2004; Travis Tilley <lv@gentoo.org> gtksee-0.5.5.1.ebuild:
  added ~amd64 keyword

  07 Apr 2004; Ciaran McCreesh <ciaranm@gentoo.org> gtksee-0.5.5.1.ebuild:
  Added ~sparc, #46912

  18 Jan 2004; Michael Sterrett <mr_bones_@gentoo.org> gtksee-0.5.5.1.ebuild:
  marked x86 stable

*gtksee-0.5.5.1 (24 Nov 2003)

  24 Nov 2003; Michael Sterrett <mr_bones_@gentoo.org> gtksee-0.5.4.ebuild,
  gtksee-0.5.5.1.ebuild:
  mark 0.5.4 stable; version bump

  30 Oct 2003; David Holm <dholm@gentoo.org> gtksee-0.5.4.ebuild:
  Added to ~ppc.

*gtksee-0.5.4 (22 Sep 2003)

  22 Sep 2003; Michael Sterrett <msterret@gentoo.org> gtksee-0.5.4.ebuild:
  version bump; add metadata.xml

*gtksee-0.5.3 (21 Aug 2003)

  21 Aug 2003; Michael Sterrett <msterret@gentoo.org> gtksee-0.5.3.ebuild:
  version bump (bug 27033)

*gtksee-0.5.2 (08 Jul 2003)

  08 Jul 2003; Christian Birchinger <joker@gentoo.org> gtksee-0.5.2.ebuild:
  Version bump

*gtksee-0.5.0 (15 May 2002)

  15 May 2002; Arcady Genkin <agenkin@thpoon.com> gtksee-0.5.0.ebuild :
  
  Initial release of GTK See ebuild, submitted by Lasse Mikkelsen
  <lbm@fatalerror.dk>.