@@ -1,6 +1,6 @@
-MD5 51d632950735745353bcd10b547d36e6 ChangeLog 1656
+MD5 9b16a31bfe9f43e53e7e333d3fcc0636 ChangeLog 1752
 MD5 ac87b434d7ee32b21eaa9b8d110a3e4a gtksee-0.5.4.ebuild 745
 MD5 e6d8ced1f09eb759fdb9c5df11dc7195 metadata.xml 528
-MD5 e20c230f4c13665dea95942e83418809 gtksee-0.5.6.ebuild 804
-MD5 1c962835f0193cb66e10a04a07026e1c files/digest-gtksee-0.5.4 64
+MD5 02c6ad8ecb2008421637f97e65bd4007 gtksee-0.5.6.ebuild 824
 MD5 188634bd77a86d48d390bb5a0af4bd04 files/digest-gtksee-0.5.6 64
+MD5 1c962835f0193cb66e10a04a07026e1c files/digest-gtksee-0.5.4 64
