@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/gtksee/gtksee-0.5.6.ebuild,v 1.3 2004/09/23 00:29:48 pvdabeel Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/gtksee/gtksee-0.5.6.ebuild,v 1.4 2004/09/23 00:38:35 mr_bones_ Exp $
 
 DESCRIPTION="A simple but functional image viewer/browser - ACD See alike."
 HOMEPAGE="http://gtksee.berlios.de/"
@@ -25,6 +25,6 @@ src_compile() {
 }
 
 src_install() {
-	einstall || die
-	dodoc AUTHORS ChangeLog INSTALL NEWS README TODO || die "dodoc failed"
+	make DESTDIR="${D}" install || die "make install failed"
+	dodoc AUTHORS ChangeLog INSTALL NEWS README TODO
 }
